Make contact info more readable and fix navbar

--- a/static/index.css
+++ b/static/index.css
@@ -89,7 +89,7 @@ code {
 }
 
 blockquote {
-	background-color: #1d2021;
+	background-color: #43494b;
 	padding: 5px;
 	border-radius: 5px;
 }
